examples/invalid/invalid_spawn.fg
fn main():
    task := spawn 42
    print(task.to_string())
